# pricely

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  checker_main.py  coverage.xml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  settings.json
.github/: ci.yml
.github/workflows/: ci.yml  ci.yml.save
adapters/: OzonAdapter..py  interfaces.py  ozon.py  ozon_adapter..py  ozon_adapter.py  ozon_parser.py  selenium_adapter.py  session_engine.py  wb.py  wb_adapter.py  yandex_adapter.py
adapters/ozon/: ozon.py  ozon_assistant.py
alembic/: env.py
alembic/versions/: 10cea69b1587_upd.py  (+12 more)
application/: __init__.py  collector.py
bot/: bot.py
config/: settings.py
core/: logger.py  marketplace.py  priceParser.py  price_cache.py  price_history.py  price_monitor.py  price_parser.py  price_tracker.py  telegram_notifier.py
doc/: create_table.sql  data_sheet.sql  definitely_select.sql  examples.sql  pricely_db.json  select.sql
domain/: __init__.py  exceptions.py
engine/: driver_factory.py  session_engine.py
infrastructure/: __init__.py
interfaces/: browser.py  parser.py  seleniumBrowser.py
models/: product.py
presentation/: __init__.py
scripts/: db_url.py  deploy.sh  pricely.service
src/: main.py
tests/: conftest.py  test_price_cache.py  test_price_history.py  test_price_monitor.py  test_price_parser.py  test_price_tracker.py  test_product.py  test_telegram_notifier.py  test_wb_adapter.py
use_cases/: price_tracker_use_case.py  price_tracker_use_cases.py
utils/: cookies.py  curl.py  driver.py  example.json  extract_product_id.py  logger.py  parser_utils.py  state_manager.py  sub_file1.py  testing.py  testing_wsel.py  webdriver.py
(+375 files in other folders)
