[project]
name = "pricely-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.0",
    "asyncio>=4.0.0",
    "black>=25.12.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.11",
    "sqlalchemy[asyncio]>=2.0.45",
]

[tool.black]
skip-string-normalization = true
