[project]
name = "pricely-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "alembic>=1.18.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.30.0",
    "black>=26.1.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.11",
    "sqlalchemy[asyncio]>=2.0.45",
]

[tool.black]
skip-string-normalization = true
